--- a/create/create.csproj
+++ b/create/create.csproj
@@ -1,7 +1,6 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -9,8 +8,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Checks\Checks.csproj" />
-    <ProjectReference Include="..\create\create.csproj" />
-    <ProjectReference Include="..\read\read.csproj" />
   </ItemGroup>
 
 </Project>
